--- a/Messenger App/Messenger UI/App.xaml
+++ b/Messenger App/Messenger UI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Messenger_UI.App"
+﻿<Application x:Class="MessengerUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Messenger_UI"
+             xmlns:local="clr-namespace:MessengerUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
