--- a/MessengerApp/MessengerUI/LoginWindow.xaml
+++ b/MessengerApp/MessengerUI/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MessengerUI"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="450" Width="800">
+        Title="LoginWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -50,7 +50,9 @@
                 <Grid Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="6*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="6*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
@@ -59,7 +61,8 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
-                    <Button Content="Confirm" Grid.Column="1" Grid.Row="1" Click="RegisterButton_Click"/>
+                    <Button Content="Confirm" Grid.Column="1" Grid.Row="1" Click="LoginButton_Click"/>
+                    <Button Content="Register" Grid.Column="3" Grid.Row="1" Click="RegisterButton_Click"/>
                 </Grid>
 
             </Grid>
