--- a/MessengerApp/MessengerUI/MainWindow.xaml
+++ b/MessengerApp/MessengerUI/MainWindow.xaml
@@ -5,70 +5,70 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MessengerUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+        Title="MainWindow" Height="300" Width="600" WindowStartupLocation="CenterScreen" Background="Transparent" AllowsTransparency="True" WindowStyle="None" ResizeMode="NoResize">
+    <Border Background="#272537" CornerRadius="20">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-        <TextBlock Text="Generic chatting application" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="0"/>
+            <Label Content="Generic chatting application" HorizontalAlignment="Center" Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="0" Style="{StaticResource LargeLabel}"/>
 
-        <Border Grid.Row="1" Grid.Column="1" Background="LightGray" Margin="5" BorderBrush="#FF888888" BorderThickness="3" CornerRadius="10">
-            <Grid>
+            <Grid Grid.Row="1" Grid.Column="1">
 
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-
-
-                <TextBlock Text="Register Account" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.ColumnSpan="4" Grid.Column="0"/>
-
-                <Label Content="Email:" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1"/>
-                <Label Content="Username:" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1"/>
-                <Label Content="Password:" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="4" Grid.Column="1"/>
-
-                <TextBox Name="EmailTextBox" Grid.Row="2" Grid.Column="2" MaxHeight="25" MaxWidth="200"/>
-                <TextBox Name="UsernameTextBox" Grid.Row="3" Grid.Column="2" MaxHeight="25" MaxWidth="200"/>
-                <PasswordBox Name="PasswordBox" Grid.Row="4" Grid.Column="2" MaxHeight="25" MaxWidth="200"/>
-
-                <Grid Grid.Row="5" Grid.ColumnSpan="2" Grid.Column="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="6*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="6*"/>
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="3*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="3*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
-                    <Button Content="Confirm" Grid.Column="1" Grid.Row="1" Click="RegisterButton_Click"/>
-                    <Button Content="Back to Login" Grid.Column="3" Grid.Row="1" Click="BackToLoginButton_Click"/>
-                </Grid>
 
-            </Grid>
-        </Border>
-    </Grid>
+                    <Label Content="Register Account" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.ColumnSpan="4" Grid.Column="0"/>
+
+                    <Label Content="Email:" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1"/>
+                    <Label Content="Username:" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1"/>
+                    <Label Content="Password:" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="4" Grid.Column="1"/>
+
+                    <TextBox Name="EmailTextBox" Grid.Row="2" Grid.Column="2" MaxHeight="25" MaxWidth="200"/>
+                    <TextBox Name="UsernameTextBox" Grid.Row="3" Grid.Column="2" MaxHeight="25" MaxWidth="200"/>
+                    <PasswordBox Name="PasswordBox" Grid.Row="4" Grid.Column="2" MaxHeight="25" MaxWidth="200"/>
+
+                    <Grid Grid.Row="5" Grid.ColumnSpan="2" Grid.Column="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="6*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="6*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+
+                        <Button x:Name="ConfirmButton" Content="Confirm" Grid.Column="1" Grid.Row="1" Click="RegisterButton_Click"/>
+                        <Button Content="Back to Login" Grid.Column="3" Grid.Row="1" Click="BackToLoginButton_Click"/>
+                    </Grid>
+
+                </Grid>
+        </Grid>
+    </Border>
 </Window>
