--- a/MessengerApp/MessengerUI/MainWindow.xaml
+++ b/MessengerApp/MessengerUI/MainWindow.xaml
@@ -19,6 +19,8 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
+            <Button Content="X" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Click="CloseButton_Click" Style="{StaticResource CloseButtonStyle}"/>
+
             <Label Content="Generic chatting application" HorizontalAlignment="Center" Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="0" Style="{StaticResource LargeLabel}"/>
 
             <Grid Grid.Row="1" Grid.Column="1">
